--- a/style.css
+++ b/style.css
@@ -51,14 +51,18 @@ section.options
 	position: fixed;
 	right: 0px;
 	bottom: 0px;
-	width: 100%;	
+	width: 100%;
+	z-index: 20;
 }
 body
 {
 	margin-bottom: 100px;
 }
 h2 > ul {
-	list-style-type:none
+	list-style-type:none;
+}
+ul.options li {
+	display: inline;
 }
 li.favoris {
     padding-right: 5px;
@@ -68,11 +72,34 @@ li.favoris {
 img
 {
 	vertical-align: middle;
-	width: 24px;
-	height: 24px;
+	width: 56px;
+	height: 56px;
+}
+button.bouton {
+	background-color: white;
+    color: black;
+    border: 2px solid #4CAF50; /* Green */
+    border-radius: 8px;
+    margin-right: 4px;
+    margin-left: 4px;
+    padding: 10px;
+    font-size: 16px;
+}
+button.boutonfavoris {
+	background-color: white;
+    color: black;
+    border: 2px solid #4CAF50; /* Green */
+    border-radius: 8px;
+    margin-right: 4px;
+    margin-left: 4px;
+    font-size: 16px;
+	right: 20px;
+	position: absolute;
+	z-index: 10;
 }
 a.boutonarticle
 {
 	position: absolute;
 	right: 40px;
+	z-index: -1;
 }
