--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ body
 h2 > ul {
 	list-style-type:none;
 }
+ul.taille li {
+	display: inline;
+	list-style-type:none;
+}
 ul.options li {
 	display: inline;
 }
@@ -74,6 +78,16 @@ img
 	vertical-align: middle;
 	width: 56px;
 	height: 56px;
+}
+button.taille {
+	background-color: white;
+    color: black;
+    border: 2px solid #4CAF50; /* Green */
+    border-radius: 6px;
+    margin-right: 4px;
+    margin-left: 4px;
+    padding: 5px;
+    font-size: 10px;
 }
 button.bouton {
 	background-color: white;
@@ -102,4 +116,8 @@ a.boutonarticle
 	position: absolute;
 	right: 40px;
 	z-index: -1;
+}
+p.debug{
+	background-color: red;
+    border: 5px solid black; /* Green */
 }
