--- a/style.css
+++ b/style.css
@@ -104,6 +104,8 @@ button.bouton {
     margin-left: 4px;
     padding: 10px;
     font-size: 16px;
+    right: 20px;
+    position: fixed;
 }
 button.boutonfavoris {
 	background-color: white;
