--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -2,13 +2,41 @@
 <html lang="fr">
 <head>
     <title>{{ titlepage }}</title>
+    <style>
+        .categorie > h1 {
+            text-align: center;
+            border-bottom-style: solid;
+            border-width: 2px;
+        }
+        .article {
+            background-color: lightblue;
+            text-align: left;
+            margin-top: 10px;
+            padding-left: 10px;
+            border-style: solid;
+        }
+    </style>
 </head>
 <body>
-    {% for title, taille, categorie in items %}
-        <div background-color="#FF0000">
-            <h2>{{ title }}</h2>
-            <h3>Taille : {{ taille }} </h3>
-            <h3>Catégorie : {{ categorie }} </h3>
+    {% for categorie, items in cat_items.items() %}
+        <div class="categorie">
+        <h1>{{ categorie }} {{ items|length }}</h1>
+        <table>
+        {% for ligne_items in items %}
+            <tr>
+            {% for item in ligne_items %}
+                <td>
+                <div class="article">
+                    <h2>{{ item.title }}</h2>
+                    <h3>Taille : {{ item.taille }}</h3>
+                    Fichier : "{{ item.fichier }}"
+                    <a href="{{ item.nfo }}">Nfo</a>
+                </div>
+                </td>
+            {% endfor %}
+            </tr>
+        {% endfor %}
+        </table>
         </div>
     {% endfor %}
 </body>
