Mise en favoris fonctionne

--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -19,8 +19,8 @@
             display: inline;
         }
     </style>
-    <script src="jquery-3.2.1.j"></script>
-    <script src='minsab.js'></script>
+    <script src="{{ url_for('static', filename='jquery-3.2.1.js') }}"></script>
+    <script src="{{ url_for('static', filename='minisab.js') }}"></script>
 </head>
 <body>
     <div class="categorie">
