--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -56,6 +56,7 @@
                         <h2>{{ item.title }}</h2>
                         <a href="/article/{{ item.id }}/lu">Marquer comme lu</a>
                         <button onclick="marquer_favoris({{ item.id }})">Favoris</button>
+                        <button onclick="lancer_recherche({{ item.id }})">Rechercher</button>
                     </span>
                     <h3>Taille : {{ item.taille }}</h3>
                     Fichier : "{{ item.fichier }}"
