Le téléchargement fonctionne

--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -15,6 +15,13 @@
             padding-left: 10px;
             border-style: solid;
         }
+        .article_recherche {
+            background-color: #0033AA;
+        }
+        .recherche_encours {
+            background-color: #0055CC;
+        }
+
         span {
             display: inline;
         }
@@ -23,7 +30,7 @@
     <script src="{{ url_for('static', filename='minisab.js') }}"></script>
 </head>
 <body>
-    <div class="categorie">
+    <div class="categorie" id="cat_favoris">
     <span>
         <h1>Favoris ({{ favoris|length }})</h1>
         <a href="/categorie/favoris/lu">Marquer comme lu</a>
@@ -51,12 +58,21 @@
             <tr>
             {% for item in ligne_items %}
                 <td>
-                <div class="article">
+                {% if item.recherche_resultat|length > 0 %}
+                <div class="article article_recherche" id="art_{{ item.id }}">
+                {% else %}
+                <div class="article" id="art_{{ item.id }}">
+                {% endif %}
                     <span>
                         <h2>{{ item.title }}</h2>
                         <a href="/article/{{ item.id }}/lu">Marquer comme lu</a>
                         <button onclick="marquer_favoris({{ item.id }})">Favoris</button>
                         <button onclick="lancer_recherche({{ item.id }})">Rechercher</button>
+                    </span><br>
+                    <span class=recherche>
+                    {% for item_recherche in item.recherche_resultat %}
+                        <button id="recherche_{{ item_recherche.id }}" onclick="envoyer_sab({{ item_recherche.id }})">{{ item_recherche.taille }}</button>
+                    {% endfor %}
                     </span>
                     <h3>Taille : {{ item.taille }}</h3>
                     Fichier : "{{ item.fichier }}"
