--- a/templates/article.html
+++ b/templates/article.html
@@ -5,18 +5,19 @@
 {% endif %}
     <span>
         <h2><a href="{{ item.link }}" target="_blank">{{ item.title }}</a></h2>
-        <a href="/article/{{ item.id }}/lu">Marquer comme lu</a>
+        <button onclick="marquer_lu({{ item.id }})">Marquer comme lu</button>
         <button onclick="marquer_favoris({{ item.id }})">Favoris</button>
         <button onclick="lancer_recherche({{ item.id }})">Rechercher</button>
     </span><br>
     <span class=recherche>
-    {% for item_recherche in recherche %}
+    {% for item_recherche in item.recherche_resultat %}
         {% for item_recherche in item.recherche_resultat %}
             <button id="recherche_{{ item_recherche.id }}" onclick="envoyer_sab({{ item_recherche.id }})">{{ item_recherche.taille }}</button>
         {% endfor %}
     {% endfor %}
     </span>
     <h3>Taille : {{ item.taille }}</h3>
+    <h3>Annee : {{ item.annee }}</h3>
     Fichier : "{{ item.fichier }}"
     <a href="{{ item.nfo }}">Nfo</a>
 </div>
