--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -38,6 +38,7 @@
     {% for item in favoris %}
         {% include 'article.html' %}
     {% endfor %}
+    </div>
     {% for categorie, taille, items in articles %}
         <div class="categorie">
         <span>
