--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -16,7 +16,7 @@
             border-style: solid;
         }
         .article_recherche {
-            background-color: #0033AA;
+            background-color: #0033DD;
         }
         .recherche_encours {
             background-color: #0055CC;
