--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -16,7 +16,7 @@
             border-style: solid;
         }
         .article_recherche {
-            background-color: #0033DD;
+            background-color: #0033EE;
         }
         .recherche_encours {
             background-color: #0055CC;
@@ -26,8 +26,8 @@
             display: inline;
         }
     </style>
-    <script src="{{ url_for('static', filename='jquery-3.2.1.js') }}"></script>
-    <script src="{{ url_for('static', filename='minisab.js') }}"></script>
+    <script src="{{ url_for('minisab.static', filename='jquery-3.2.1.js') }}"></script>
+    <script src="{{ url_for('minisab.static', filename='minisab.js') }}"></script>
 </head>
 <body>
     <div class="categorie" id="cat_favoris">
