--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -16,7 +16,7 @@
             border-style: solid;
         }
         .article_recherche {
-            background-color: #0033EE;
+            background-color: #0088EE;
         }
         .recherche_encours {
             background-color: #0055CC;
@@ -26,6 +26,9 @@
         }
         .telechargement_echoue {
             background-color: #DD8800
+        }
+        .telechargement_encours {
+            background-color: #DD8844
         }
         span {
             display: inline;
