--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -1,70 +1,53 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>{{ titlepage }}</title>
-    <style>
-        .categorie > h1 {
-            text-align: center;
-            border-bottom-style: solid;
-            border-width: 2px;
-        }
-        .article {
-            background-color: lightblue;
-            text-align: left;
-            margin-top: 10px;
-            padding-left: 10px;
-            border-style: solid;
-        }
-        .article_recherche {
-            background-color: #0088EE;
-        }
-        .recherche_encours {
-            background-color: #0055CC;
-        }
-        .telechargement_reussi {
-            background-color: #88DD00
-        }
-        .telechargement_echoue {
-            background-color: #DD8800
-        }
-        .telechargement_encours {
-            background-color: #DD8844
-        }
-        span {
-            display: inline;
-        }
-    </style>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Minisab</title>
+
+    <!-- Bootstrap -->
+    <link href="{{ url_for('minisab.static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="{{ url_for('minisab.static', filename='jquery-3.2.1.js') }}"></script>
     <script src="{{ url_for('minisab.static', filename='minisab.js') }}"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="{{ url_for('minisab.static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-    <div class="categorie" id="cat_favoris">
-    <span>
-        <h1>Favoris ({{ favoris|length }})</h1>
-        <button onclick="marquer_lu([{% for item in favoris %}{{ item.id }},{% endfor %}])">Marquer comme lu</button>
-    </span>
-    {% for item in favoris %}
-        {% include 'article.html' %}
-    {% endfor %}
-    </div>
-    {% for categorie, taille, items in articles %}
-        <div class="categorie">
-        <span>
-            <h1>{{ categorie }} ({{ taille }})</h1>
-            <button onclick="marquer_lu([{% for ligne_items in items %}{% for item in ligne_items %}{{ item.id }},{% endfor %}{% endfor %}])">Marquer comme lu</button>
-        </span>
-        <table>
-        {% for ligne_items in items %}
-            <tr>
-            {% for item in ligne_items %}
-                <td>
-                    {% include 'article.html' %}
-                </td>
+    <div class="container-fluid" id="app">
+        <div class="row categorie" id="cat_favoris">
+            <span>
+                <h1>Favoris ({{ favoris|length }})</h1>
+                <button onclick="marquer_lu([{% for item in favoris %}{{ item.id }},{% endfor %}])">Marquer comme lu</button>
+            </span>
+            <div class="row">
+            {% for item in favoris %}
+                {% include 'article.html' %}
             {% endfor %}
-            </tr>
-        {% endfor %}
-        </table>
+            </div>
         </div>
-    {% endfor %}
+        {% for categorie, taille, items in articles %}
+            <div class="categorie row">
+            <span>
+                <h1>{{ categorie }} ({{ taille }})</h1>
+                <button onclick="marquer_lu([{% for ligne_items in items %}{% for item in ligne_items %}{{ item.id }},{% endfor %}{% endfor %}])">Marquer comme lu</button>
+            </span>
+            {% for ligne_items in items %}
+                {% for item in ligne_items %}
+                        {% include 'article.html' %}
+                {% endfor %}
+            {% endfor %}
+            </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
