--- a/templates/article.html
+++ b/templates/article.html
@@ -14,7 +14,7 @@
 {% endif %}
 <div class="panel-heading">
     <div class="btn-group" role="group" aria-label="...">
-        <h3><a href="{{ item.link }}" target="_blank">{{ item.title }}</a>
+        <h4><a href="{{ item.link }}" target="_blank">{{ item.title }}</a>
         <button class="btn btn-default" onclick="marquer_lu([{{ item.id }}])">
             <span class="glyphicon glyphicon-trash" aria-hidden="true"/>
         </button>
@@ -23,6 +23,9 @@
         </button>
         <button class="btn btn-default" onclick="lancer_recherche({{ item.id }})">
             <span class="glyphicon glyphicon-search" aria-hidden="true"/>               
+        </button>
+        <button class="btn btn-default" onclick="deplier_recherche({{ item.id }})">
+            <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"/>               
         </button>
         {% if item.recherche_resultat|length > 0 %}
         <div class="btn-group">
@@ -36,39 +39,21 @@
             </ul>
         </div>
         {% endif %}
-        </h3>
+        </h4>
     </div>
 </div>
 <div class="panel-body">
-    {% if item.recherche_resultat|length > 0 %}
-	<h4> {{ item.recherche_resultat[0].categorie_sabnzbd }} </h4>
-    <select name="Categorie">
-      {% for item_categorie in categorie_sabnzbd %}
-        {% if item_categorie == item.recherche_resultat[0].categorie_sabnzbd %}
-            <option value="{{ item_categorie }}" selected>{{ item_categorie }}</option>
-        {% else %}
-            <option value="{{ item_categorie }}">{{ item_categorie }}</option>
-        {% endif %}
-      {% endfor %}
-    </select>
-    {% endif %}
-    <br>
-    <button onclick="deplier_recherche({{ item.id }})">...</button>
-    {% if item.recherche_resultat|length < 4 %}
-    <ul class=recherche style="display: block;">
-    {% else %}
-    <ul class=recherche style="display: none;">
-    {% endif %}
-    {% for item_recherche in item.recherche_resultat %}
-        <li>{{ item_recherche.taille }} {{ item_recherche.title }} {{ item_recherche.id_check }}
-        <button id="recherche_{{ item_recherche.id }}" onclick="envoyer_sab({{ item_recherche.id }}, {{ item.id }})">Télécharger</button>
-        </li>
-    {% endfor %}
-    </ul>
-    <h3>Taille : {{ item.taille }}</h3>
-    <h3>Annee : {{ item.annee }}</h3>
-    Fichier : "{{ item.fichier }}"
-    <a href="{{ item.nfo }}">Nfo</a>
+    <h5><p>Taille  <span class="label label-default">{{ item.taille }}</span>
+    Annee  <span class="label label-default">{{ item.annee }}</span>
+    Fichier <span class="label label-default">{{ item.fichier }}</span><br>
+    <a href="{{ item.nfo }}">Nfo</a></p></h5>
 </div>   
+    {% if item.recherche_resultat|length > 0 %}
+    <div class="list-group">
+        {% for item_recherche in item.recherche_resultat %}
+          <button type="button" class="list-group-item" id="recherche_{{ item_recherche.id }}" onclick="envoyer_sab({{ item_recherche.id }}, {{ item.id }})"><span class="badge">{{ item_recherche.taille }}</span>{{ item_recherche.title }}</button>
+        {% endfor %}
+    </div>
+    {% endif %}
 </div>
 </div>
