--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -27,7 +27,7 @@
         <div class="page-header">
         <h1>Minisab</h1>
         </div>
-        <div class="row categorie" id="cat_favoris">
+        <div class="row categorie">
         <div class="col-md-8">
             <div class="panel panel-danger">
                 <div class="panel-heading">
@@ -43,7 +43,7 @@
             </div>
         </div>
         </div>
-        <div class="row">
+        <div class="row" id="cat_favoris">
             {% for item in favoris %}
                 {% include 'article.html' %}
             {% endfor %}
