--- a/templates/minifluxlist.html
+++ b/templates/minifluxlist.html
@@ -25,7 +25,7 @@
 <body>
     <div class="container-fluid" id="app">
         <div class="page-header">
-        <h1>Minisab</h1>
+        <h1>Minisab <span class="badge">{{ version }}</span></h1>
         </div>
         <div class="row">
             {% include 'barre_categorie.html' %}
