--- a/templates/article.html
+++ b/templates/article.html
@@ -24,7 +24,7 @@
         <button class="btn btn-default" onclick="lancer_recherche({{ item.id }})">
             <span class="glyphicon glyphicon-search" aria-hidden="true"/>               
         </button>
-        <button class="btn btn-default" onclick="deplier_recherche({{ item.id }})">
+        <button class="btn btn-default {{ 'disabled' if item.recherche_resultat|length == 0 }}" data-toggle="collapse" data-parent="#art_{{ item.id }}" data-target="#recresult_{{ item.id }}">
             <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"/>               
         </button>
         </h4>
@@ -50,7 +50,7 @@
     </p>
 </div>   
     {% if item.recherche_resultat|length > 0 %}
-    <div class="list-group" style="display: none;">
+    <div class="list-group collapse" id="recresult_{{ item.id }}">
         {% for item_recherche in item.recherche_resultat %}
           <button type="button" class="list-group-item resultat_recherche" id="recherche_{{ item_recherche.id }}" onclick="envoyer_sab({{ item_recherche.id }}, {{ item.id }})"><span class="badge">{{ item_recherche.taille }}</span>{{ item_recherche.title|truncate(40) }}</button>
         {% endfor %}
