--- a/templates/article.html
+++ b/templates/article.html
@@ -32,7 +32,7 @@
     {% if item.recherche_resultat|length > 0 %}
     <div class="btn-group recherche" role="group" aria-label="...">
         {% for item_categorie in categorie_sabnzbd %}
-            {% if item_categorie == item.recherche_resultat[0].categorie_sabnzbd %}
+            {% if item_categorie == item.categorie.categorie_sabnzbd %}
             <button type="button" class="btn btn-danger {{ item_categorie }}" onclick="change_selection({{ item.id }}, '{{ item_categorie }}')">{{ item_categorie }}</button>
             {% else %}
             <button type="button" class="btn btn-default {{ item_categorie }}" onclick="change_selection({{ item.id }}, '{{ item_categorie }}')">{{ item_categorie }}</button>
